<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_gravity="center_vertical"
    >
	<EditText
		android:id="@+id/reg_email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/email" />
	<EditText
		android:id="@+id/reg_first_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/first_name" />
	<EditText
		android:id="@+id/reg_last_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/last_name" />
	<EditText
		android:id="@+id/reg_city"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/city" />
	<EditText
		android:id="@+id/reg_zip"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/zip" />
	<EditText
		android:id="@+id/reg_phone_number"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/phone_number" />
	<EditText
		android:id="@+id/reg_bio"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="false"
		android:imeOptions="actionNext"
		android:hint="@string/bio" />
	<EditText
		android:id="@+id/reg_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:password="true"
		android:hint="@string/password" />
	<EditText
		android:id="@+id/reg_password_confirm"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:password="true"
		android:hint="@string/password_confirm" />
	<ProgressBar
		android:id="@+id/login_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|bottom"
		android:visibility="invisible"
		style="@android:style/Widget.ProgressBar.Small"/>
	<Button
		android:id="@+id/next_button"
		android:layout_width = "match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/next_step"/>
</LinearLayout>

