<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
	android:layout_gravity="center_vertical"
    >
    <ImageView
    	android:id="@+id/logo"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:src="@drawable/logo" />
	<EditText
		android:id="@+id/email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionNext"
		android:hint="@string/email" />
	<EditText
		android:id="@+id/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:singleLine="true"
		android:imeOptions="actionDone"
		android:password="true"
		android:hint="@string/password" />
	<Button
		android:id="@+id/login_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/login"/>
	<ProgressBar
		android:id="@+id/login_progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|bottom"
		android:visibility="invisible"
		style="@android:style/Widget.ProgressBar.Small"/>
</LinearLayout>

